<resources>
    <string name="app_name">Demeter</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">Demeter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Manual</string>
    <string name="title_dashboard">Automatic</string>
    <string name="title_notifications">Settings</string>
    <string name="manual_control">Manual Control</string>
    <string name="barrel_fill">Fill barrel</string>
    <string name="irrigate">Irrigate garden</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="automatic_tasks">Tasks</string>
    <string name="new_task">New task</string>
    <string name="garden">garden</string>
    <string name="flowers">flowers</string>
    <string name="greenhouse">greenhouse</string>
</resources>
