<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

  </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:app="http://schemas.android.com/apk/res-auto"
                      android:id="@+id/add_task_frame"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:padding="@dimen/activity_horizontal_margin">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <RadioButton
                    android:id="@+id/rb_fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/barrel_fill"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

                <RadioButton
                    android:id="@+id/rb_garden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/garden"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

                <RadioButton
                    android:id="@+id/rb_flowers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flowers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

                <RadioButton
                    android:id="@+id/rb_greenhouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/greenhouse"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>


            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <TextView
                    android:id="@+id/time_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <Button
                    android:id="@+id/bt_pick_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                <TextView
                    android:id="@+id/date_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <Button
                    android:id="@+id/bt_pick_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="..."/>

            </LinearLayout>
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_edit_task_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_done"
            app:fabSize="normal"
            app:layout_anchor="@id/add_task_frame"
            app:layout_anchorGravity="bottom|right|end"/>
    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>